Side-bar li active class will change as well depending on content in view. Fixed bug that occured on mobile devices.Was Unable to scroll all the way down. It was caused by active bar script. Script will be start  when device width is larger than 1200px, otherwise it will stay put.

--- a/css/styles.css
+++ b/css/styles.css
@@ -203,6 +203,12 @@ ul{
             transform: scale(1.1,1.2) rotate(360deg);
             color:#000 !important;
         }
+        .li-active{
+            transition:1s;
+            background:repeating-linear-gradient(45deg,#b030b0,transparent);
+            color:#000 !important;
+
+        }
         /*Despre mine */
             /* Container */
             .container-despre-mine{
